<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.academymanagement.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home"/>

    <fragment
        android:id="@+id/nav_credits"
        android:name="com.example.academymanagement.ui.credits.CreditsFragment"
        android:label="@string/menu_credits"
        tools:layout="@layout/fragment_credits" />
    <fragment
        android:id="@+id/nav_history"
        android:name="com.example.academymanagement.ui.history.HistoryFragment"
        android:label="@string/menu_history"
        tools:layout="@layout/fragment_history" />
    <fragment
        android:id="@+id/nav_tables"
        android:name="com.example.academymanagement.ui.tables.TablesFragment"
        android:label="@string/menu_tables"
        tools:layout="@layout/fragment_tables" />
    <fragment
        android:id="@+id/nav_leaderboard"
        android:name="com.example.academymanagement.ui.leaderboard.LeaderboardFragment"
        android:label="@string/menu_leaderboard"
        tools:layout="@layout/fragment_leaderboard" />
    <fragment
        android:id="@+id/nav_reward"
        android:name="com.example.academymanagement.ui.reward.RewardFragment"
        android:label="@string/menu_reward"
        tools:layout="@layout/fragment_reward" />
    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.academymanagement.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />
    <fragment
        android:id="@+id/nav_contact_information"
        android:name="com.example.academymanagement.ui.contact_information.ContactInformationFragment"
        android:label="@string/menu_contact"
        tools:layout="@layout/fragment_contact_information"/>
    <activity
        android:id="@+id/mainActivity"
        android:name="com.example.academymanagement.CustomerActivity"
        android:label="app_bar_main"
        tools:layout="@layout/app_bar_main" />
    <activity
        android:id="@+id/homeActivity"
        android:name="com.example.academymanagement.SnookerAcademy"
        android:label="HomeActivity" />
    <activity
        android:id="@+id/loginActivity"
        android:name="com.example.academymanagement.LoginActivity"
        android:label="activity_login"
        tools:layout="@layout/activity_login" />
    <activity
        android:id="@+id/registerActivity"
        android:name="com.example.academymanagement.RegisterActivity"
        android:label="activity_register"
        tools:layout="@layout/activity_register" />

</navigation>